@@ -4,7 +4,7 @@ PROJECT(RCDCap)
 
 SET(CMAKE_VERBOSE_MAKEFILE on)
 
-SET(RCDCap_VERSION "0.9.0")
+SET(RCDCap_VERSION "0.9.1")
 SET(RCDCap_VERSION_MAJOR 0)
 SET(RCDCap_VERSION_MINOR 9)
 SET(RCDCap_VERSION_PATCH 0)
