@@ -1,0 +1,3 @@
+RCDCap is a packet processing framework.
+Original RCDCap support only Cisco ERSPAN and HP ERM format, but this version support Transparent Ethernet Bridging (VMWare).
+
