@@ -25,78 +25,6 @@
 namespace RCDCap
 {
 #pragma pack(push, 1)
-/*! \brief Contains a list of all of the available protocols that could be
- *         transfered through GRE.
- */
-enum GREProtocolType
-{
-    RCDCAP_GRE_ERSPAN = 0x88be      //!< CISCO ERSPAN protocol number.
-};
-
-/*! \brief Specifies the fields in the GRE header and provides a convenient way
- *         to access them.
- */
-class GREHeader
-{
-    enum
-    {
-        BF_CHECKSUM_BIT,            //!< The index of the checksum bit.
-        BF_ROUTING_BIT,             //!< The index of the routing bit.
-        BF_KEY_BIT,                 //!< The index of the key bit.
-        BF_SEQUENCE_NUMBER_BIT,     //!< The index of the sequence number bit.
-        BF_STRICT_SOURCE_ROUTE_BIT, //!< The index of the strict source route bit.
-        BF_RECURSION_CONTROL,       //!< The index of the recursion control bit field.
-        BF_FLAGS,                   //!< The index of the flags bit field.
-        BF_VERSION                  //!< The index of the version bit field.
-    };
-    NetworkByteOrderBitfield<uint16, 1, 1, 1, 1, 1, 3, 5, 3> m_Flags;           //!< The variable that is holding some of the bit fields.
-    NetworkByteOrder<uint16>                                 m_ProtocolType;    //!< The protocol that is carried through GRE.
-public:
-    //! Constructor.
-    GREHeader() { static_assert(sizeof(GREHeader) == 4, "invalid header size"); }
-    
-    //! Returns true if the checksum bit is set and the checksum optional field is present, respectively.
-    bool isCheksumPresent() const { return static_cast<bool>(m_Flags.get<BF_CHECKSUM_BIT>()); }
-    
-    //! Returns true if the sequence number bit is set and the sequence number optional field is present, respectively.
-    bool isSeqNumPresent() const { return static_cast<bool>(m_Flags.get<BF_SEQUENCE_NUMBER_BIT>()); }
-    
-    //! Returns the version of the GRE protocol that is currently employed.
-    uint8 getVersion() const { return static_cast<uint8_t>(m_Flags.get<BF_VERSION>()); }
-    
-    //! Returns the protocol that is carried through GRE.
-    uint16 getProtocolType() const { return m_ProtocolType; }
-};
-
-/*! \brief Specifies the fields in the checksum optional part of the GRE header and
- *         provides a convenient way to access them.
- */
-class GREChecksumField
-{
-    NetworkByteOrder<uint16>                        m_Checksum;     //!< GRE checksum field.
-    NetworkByteOrder<uint16>                        m_Offset;       //!< GRE reserved field.
-public:
-    //! Constructor.
-    GREChecksumField() { static_assert(sizeof(GREChecksumField) == 4, "invalid header size"); }
-    
-    //! Returns the checksum.
-    uint16 getChecksum() const { return m_Checksum; }
-};
-
-/*! \brief Specifies the fields in the sequence number optional part of the GRE header and
- *         provides a convenient way to access them.
- */
-class GRESeqNumField
-{
-    NetworkByteOrder<uint32>                        m_SeqNum;       //!< GRE sequence number field.
-public:
-    //! Constructor.
-    GRESeqNumField() { static_assert(sizeof(GRESeqNumField) == 4, "invalid header size"); }
-    
-    //! Returns the sequence number.
-    uint32 getSequenceNumber() const { return m_SeqNum; }
-};
-
 /*! \brief Specifies the fields in the CISCO ERSPAN header and provides a convenient way to access them
  *
  *  ERSPAN -- as it is called in CISCO's terminology -- is the protocol
