@@ -1,3 +1,7 @@
+RCDCap-0.9.1
+===========
+Add support Transparent Ethernet bridging (0x6558)
+
 RCDCap-0.9.0
 ============
 Type I and II ERSPAN
